; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/zstd/lib/legacy/extr_zstd_v07.c_ZSTDv07_decompress_usingPreparedDCtx.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/zstd/lib/legacy/extr_zstd_v07.c_ZSTDv07_decompress_usingPreparedDCtx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32*, i8*, i64, i8*, i64)* @ZSTDv07_decompress_usingPreparedDCtx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ZSTDv07_decompress_usingPreparedDCtx(i32* %0, i32* %1, i8* %2, i64 %3, i8* %4, i64 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i8* %2, i8** %9, align 8
  store i64 %3, i64* %10, align 8
  store i8* %4, i8** %11, align 8
  store i64 %5, i64* %12, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = load i32*, i32** %8, align 8
  %15 = call i32 @ZSTDv07_copyDCtx(i32* %13, i32* %14)
  %16 = load i32*, i32** %7, align 8
  %17 = load i8*, i8** %9, align 8
  %18 = call i32 @ZSTDv07_checkContinuity(i32* %16, i8* %17)
  %19 = load i32*, i32** %7, align 8
  %20 = load i8*, i8** %9, align 8
  %21 = load i64, i64* %10, align 8
  %22 = load i8*, i8** %11, align 8
  %23 = load i64, i64* %12, align 8
  %24 = call i64 @ZSTDv07_decompressFrame(i32* %19, i8* %20, i64 %21, i8* %22, i64 %23)
  ret i64 %24
}

declare dso_local i32 @ZSTDv07_copyDCtx(i32*, i32*) #1

declare dso_local i32 @ZSTDv07_checkContinuity(i32*, i8*) #1

declare dso_local i64 @ZSTDv07_decompressFrame(i32*, i8*, i64, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
